<?xml version="1.0" encoding="utf-8"?>

<!--
-
- TOP Development
- fragment_signup_add_teachers.xml
-
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/jarvisPrimaryColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textview_title_line_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/textview_would_you_like"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textsize_signup_titles"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/textview_title_line_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textview_title_line_1"
        app:layout_constraintStart_toStartOf="@id/textview_title_line_1"
        app:layout_constraintBottom_toTopOf="@id/textview_title_line_3"
        android:layout_marginStart="@dimen/indent_margin"
        android:text="@string/textview_to_add_teachers"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textsize_signup_titles"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/textview_title_line_2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textview_title_line_2"
        app:layout_constraintStart_toStartOf="@id/textview_title_line_1"
        app:layout_constraintBottom_toTopOf="@id/gl_25"
        android:layout_marginStart="@dimen/indent_margin"
        android:text="@string/textview_now"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textsize_signup_titles"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/textview_title_line_3"/>

    <Button
        android:layout_width="@dimen/button_height_width"
        android:layout_height="@dimen/button_height_width"
        app:layout_constraintTop_toBottomOf="@id/gl_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_no"
        android:background="@drawable/circle_button_background"
        android:text="@string/button_yes"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textsize_default_button_style"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/button_yes"/>

    <Button
        android:layout_width="@dimen/button_height_width"
        android:layout_height="@dimen/button_height_width"
        app:layout_constraintTop_toBottomOf="@id/button_yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/circle_button_background"
        android:text="@string/button_no"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textsize_default_button_style"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/button_no"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="horizontal"
        android:id="@+id/gl_25"/>

</androidx.constraintlayout.widget.ConstraintLayout>