<?xml version="1.0" encoding="utf-8"?>

<!--
-
- TOP Development
- fragment_login.xml
-
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jarvisPrimaryColor">

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_80"
        style="@style/DefaultButton"
        android:text="@string/button_help"
        android:id="@+id/button_help"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/button_help"
        app:layout_constraintStart_toEndOf="@id/gl_20"
        app:layout_constraintEnd_toEndOf="@id/gl_80"
        android:src="@drawable/jarvislogo_blue"
        android:id="@+id/iv_logo"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="@id/gl_20"
        app:layout_constraintEnd_toEndOf="@id/gl_80"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/edittext_hint_email"
        style="@style/DefaultEdittext"
        android:singleLine="true"
        android:id="@+id/edittext_email"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edittext_email"
        app:layout_constraintStart_toStartOf="@id/gl_20"
        app:layout_constraintEnd_toEndOf="@id/gl_80"
        style="@style/DefaultEdittext"
        android:hint="@string/edittext_hint_password"
        android:inputType="textPassword"
        android:id="@+id/edittext_password"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edittext_password"
        app:layout_constraintStart_toStartOf="@id/gl_20"
        app:layout_constraintEnd_toEndOf="@id/gl_80"
        style="@style/DefaultButton"
        android:text="@string/button_login"
        android:id="@+id/button_login"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintStart_toStartOf="@id/gl_20"
        app:layout_constraintEnd_toEndOf="@id/gl_80"
        style="@style/DefaultButton"
        android:text="@string/button_signup"
        android:id="@+id/button_signup"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="vertical"
        android:id="@+id/gl_10"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.2"
        android:orientation="vertical"
        android:id="@+id/gl_20"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"
        android:id="@+id/gl_50"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.8"
        android:orientation="vertical"
        android:id="@+id/gl_80"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="vertical"
        android:id="@+id/gl_90"/>

</androidx.constraintlayout.widget.ConstraintLayout>